# simple-bank

./: .gitignore  README.md  docker-compose.yaml  pom.xml  requirements.txt
admin/admin/: settings.py
experiments/: go.mod  main.go
gateway/: Dockerfile  docker-compose.yml  go.mod  go.sum  index.js  main.go  package.json  pyproject.toml  server.py  settings.py
gateway/access/: serializers.py  urls.py  views.py
gateway/auth/: models.py  urls.py  views.py
gateway/config/: settings.py  urls.py
gateway/controllers/: api.py
gateway/database/: db.py  schemas.py
gateway/models/: api.py
gateway/repositories/: api.py
gateway/router/: admin.py  models.py  urls.py  views.py
gateway/router/migrations/: 0001_initial.py  0002_auto_20210811_0022.py
gateway/src/: controllers.go  domain.go  repositories.go
gateway/tests/: test_api.py
notes/: main.go
product/: Cargo.toml  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
product/controllers/: config.go  factories.go  products.go  setup.go
product/domain/: entities.go  errors.go  repositories.go  states.go  usecases.go
product/infra/: product_repository.go  uuid_repository.go
product/infra/database/: config.go  gorm_repository.go  models.go
product/infra/postgres/: models.go  product_repository.go
product/infra/redis/: channel_repository.go  config.go
product/infra/repositories/: product_repository.go  uuid_repository.go
product/src/: main.rs
product/tests/: controller_test.go  domain_test.go  infra_test.go  setup.go
product_deprecated/: go.mod  main.go
sample/: go.mod  main.go
(+60 files in other folders)
