[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["João Pedro Limão <jplimao12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
couchbase = "^3.2.1"
motor = "^2.5.1"
python-dotenv = "^0.19.0"
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
