[tool.poetry]
name = "product"
version = "0.1.0"
description = ""
authors = ["João Pedro Limão <jplimao12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.2"
pymongo = "^3.12.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
